plugins {
    id 'java'
    id 'application'
}

group 'com.janiwanow.flatmap'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

application {
    mainClassName = 'com.janiwanow.flatmap.EntryPoint'
}

dependencies {
    implementation 'org.jsoup:jsoup:1.12.2'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'org.postgresql:postgresql:42.2.10'
    implementation 'io.github.cdimascio:java-dotenv:5.1.3'
    implementation 'com.beust:jcommander:1.78'
    implementation 'org.greenrobot:eventbus:3.2.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.6.0'
    testImplementation 'io.cucumber:cucumber-java:5.1.3'
    testImplementation 'io.cucumber:cucumber-junit:5.1.3'
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.26.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
}

test {
    useJUnitPlatform()
}
